--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">Chaboucasch</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="play_button">Play</string>
     <string name="rules_button">Rules</string>
     <string name="settings_string">Settings</string>
+    <string-array name="languages">
+        <item>Francais</item>
+        <item>English</item>
+    </string-array>
 </resources>
